--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,7 @@ matplotlib = "^3.10.3"
 seaborn = "0.13.2"
 scikit-learn = "^1.7.0"
 dtreeviz = "^2.2.2"
+kaggle = "^1.7.4.5"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
