--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,9 @@ seaborn = "0.13.2"
 scikit-learn = "^1.7.0"
 dtreeviz = "^2.2.2"
 kaggle = "^1.7.4.5"
+polars = "0.20.22"
+grpcio = "^1.0.0"
+pyarrow = "^21.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
